fixed gap

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -4,6 +4,8 @@
 .Home{
     background-color: #e7e7e7;
     margin: 0 auto;
+    position: absolute;
+
 
     .listbutton{
         display: block;
